--- a/Agent_RAG.ipynb
+++ b/Agent_RAG.ipynb
@@ -4196,7 +4196,7 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ['GOOGLE_API_KEY'] = 'AIzaSyAaISsKIso4u88SgFT-xvZqlSmLHipW66E'"
+        "os.environ['GOOGLE_API_KEY'] = '~'"
       ],
       "metadata": {
         "id": "_jiw5djroqc4"
