--- a/Agent_RAG.ipynb
+++ b/Agent_RAG.ipynb
@@ -4745,7 +4745,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#os.environ[LLAMA_CLOUD_API_KEY]='llx-W9QeRQu1QMpGU4gmLj7IXYUEqAiUWJXyllvozw44vZ0rhsmx'"
+        "#os.environ[LLAMA_CLOUD_API_KEY]='~'"
       ],
       "metadata": {
         "id": "TXm03MebtNlt"
