--- a/Agent_RAG.ipynb
+++ b/Agent_RAG.ipynb
@@ -4769,7 +4769,7 @@
     {
       "cell_type": "code",
       "source": [
-        "documents2 = LlamaParse(api_key='llx-W9QeRQu1QMpGU4gmLj7IXYUEqAiUWJXyllvozw44vZ0rhsmx',\n",
+        "documents2 = LlamaParse(api_key='~',\n",
         "                        result_type=\"markdown\", verbose= True).load_data(\"./data/2023_canadian_budget.pdf\"\n",
         ")\n",
         "index2 = VectorStoreIndex.from_documents(documents2, embed_model= HuggingFaceEmbedding(model_name=\"BAAI/bge-small-en-v1.5\"))\n",
